syntax = "proto3";

service Content{

    rpc Search(ReqContent)returns(RespContent){}
    rpc Add(ContentModel)returns(Resp){}
    rpc Delete(Ids)returns(Resp){}
    rpc FindOne(ContentModel)returns(ContentModel){}
    rpc Update(ContentModel)returns(Resp){}
    rpc FindByCategoryId(ContentModel)returns(RespContent){}

}

message Ids{
    repeated string ids=1;
}

message ReqContent{
    int32 page      =1;
    int32 rows      =2;

}

message RespContent{

    sint64 total = 1;

    repeated ContentModel rows = 2;
}

message ContentModel{
    sint64 id =1;
    sint64 categoryId =2;
    string title =3;
    string url =4;
    string pic =5;
    string status =6;
    sint64 sortOrder =7;
}

message Resp{
    bool flag = 1;
    string message = 2;
}


